css/webflow-style.css
/* ... */
.case-container.tasker {
  background-image: url("../images/tasker.jpg");
}

.case-container.tgcontest {
  background-image: url("../images/wallet.jpg");
}

.case-container.omt {
  background-image: url("../images/omtapp.jpg");
}

.case-container.gto {
  background-image: url("../images/project-207-20-e2-80-93-20policyfly.png");
  background-position: 50%;
}

.case-container.demis {
  background-image: url("../images/demisai.jpg");
  background-position: 50%;
}

.case-container.original {
  display: none;
}

.image {
  align-items: stretch;
  display: inline-flex;
  position: static;
  inset: 0% 0% auto;
}

.div-block-3 {
  background-color: #f5f5f7;
  border-radius: 40px;
  justify-content: space-between;
  align-items: stretch;
  min-width: auto;
  min-height: 600px;
  margin-left: 40px;
  margin-right: 40px;
  padding-left: 0;
  display: flex;
  overflow: hidden;
}

.container-2 {
  background-color: #9e9e9e;
  background-image: url("../images/zhigulingo.jpg");
  background-position: 50% 30%;
  background-size: cover;
  background-attachment: scroll;
  border-radius: 40px;
  flex: 1;
  min-height: 360px;
  margin-top: 60px;
  margin-bottom: 60px;
  margin-right: 60px;
}

.container-3 {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  flex-flow: column;
  flex: 1;
  justify-content: center;
  align-items: center;
  margin-left: 0;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
}

.button {
  margin-left: auto;
  margin-right: auto;
}

.questionare {
  margin-bottom: 100px;
  display: block;
}

.toggle-wrapper {
  background-color: var(--white);
  border-radius: 60px;
  min-width: 32rem;
  min-height: 4rem;
  margin-left: 40px;
  margin-right: 600px;
  display: flex;
  position: relative;
  overflow: visible;
}

.explore-services {
  background-color: #f5f5f7;
  margin-top: 0;
  padding-top: 20px;
  padding-bottom: 60px;
  display: block;
}

.button-switch {
  background-color: #0000;
  border: none;
  flex: 1;
  order: 1;
  align-self: stretch;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 14px 12px;
  cursor: pointer;
  position: relative;
  z-index: 5;
  overflow: hidden;
}

.button-switch.active {
  z-index: 6;
  background-color: #2e2e2e;
  border-radius: 60px;
  justify-content: center;
  align-items: center;
  margin: 0;
  padding: 0;
  display: block;
  position: absolute;
  top: 5px;
  bottom: 5px;
  left: 5px;
  width: calc(33.333% - 3.33px);
  pointer-events: none;
  overflow: visible;
}

.button-switch._2, .button-switch._3 {
  z-index: 5;
  cursor: pointer;
  background-color: #0000;
  position: relative;
}

.button-switch._1 {
  z-index: 5;
  text-align: center;
  cursor: pointer;
  background-color: #0000;
  position: relative;
}

.text-block {
  color: #1b1b1b;
  text-align: center;
  justify-content: center;
  align-items: center;
  font-size: 14px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  position: static;
  transition: color 0.3s ease;
}

.text-block._2 {
  color: #1b1b1b;
}

.text-block._3 {
  color: #1b1b1b;
}

.text-block.off {
  z-index: 5;
  color: #1b1b1b;
  position: relative;
}

.text-block.on {
  z-index: 5;
  color: #fff;
  position: relative;
}

.text-block.brand {
  color: #1b1b1b;
}

.text-block.motion {
  padding-right: 0;
}

.text-block.web {
  padding-right: 0;
}

.brand-container {
  justify-content: center;
  align-items: flex-start;
  padding: 40px 20px;
  display: flex;
}

.div-block-4 {
  grid-column-gap: 12px;
  grid-row-gap: 12px;
  display: flex;
}

.container-4 {
  grid-column-gap: 12px;
  grid-row-gap: 12px;
  flex-flow: column;
  max-width: 320px;
  padding-left: 10px;
  padding-right: 10px;
  display: flex;
}

.image-2 {
  max-width: 40%;
}

.selectoranimation {
  max-width: 800px;
}

.motion-container, .web-container {
  justify-content: center;
  align-items: flex-start;
  padding: 40px 20px;
  display: none;
}

.options {
  min-height: 500px;
  margin-bottom: 100px;
  position: relative;
}

.review-card {
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  cursor: pointer;
  background-color: #fff;
  border-radius: 26px;
  flex-flow: column;
  flex: none;
  width: 400px;
  height: 240px;
  margin-bottom: 0;
  margin-left: 0;
  padding: 40px 34px;
  display: flex;
  position: relative;
  overflow: visible;
}

.review-card.big {
  background-color: #cacaca;
  width: 460px;
  height: 460px;
}

.review-card.big.dreamstalk {
  background-color: #f8f8fa;
  background-image: url("../images/animatedsticker-ezgif.com-gif-maker.gif");
  background-position: 50% 100%;
  background-repeat: no-repeat;
  background-size: 200px 200px;
  flex: 1;
  min-width: 460px;
  min-height: 460px;
}

.review-card.big.helper {
  background-color: #f8f8fa;
  background-image: url("../images/639b398738ab4f75f608bdc9_card-img-01-402.jpg");
  background-position: 50% 100%;
  background-repeat: no-repeat;
  background-size: 200px;
  background-attachment: scroll;
  flex: 1;
  min-width: 460px;
  min-height: 460px;
}

.persona {
  grid-column-gap: 12px;
  grid-row-gap: 12px;
  object-fit: contain;
  flex: 0 auto;
  justify-content: flex-start;
  align-items: flex-start;
  padding-bottom: 20px;
  display: flex;
  position: static;
}

.persona.jack {
  justify-content: flex-start;
  align-items: flex-start;
}

.button-2 {
  text-transform: none;
  background-color: #b3b6b9;
  border-radius: 20px;
  flex: 0 auto;
  margin-bottom: 0;
  margin-left: auto;
  margin-right: 20px;
  font-size: 20px;
  display: block;
}

.button-2.learn {
  color: #06c;
  background-color: #b3b6b900;
  flex: 0 auto;
  margin-right: auto;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-right: 4px;
  font-size: 16px;
  line-height: 14px;
}
/* ... */

